--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="images/molloy-16.png">
+    <meta name="theme-color" content="white">
+    <title>PWA Test</title>
 </head>
-<body>
-    <h1>Pozdrav</h1>
-</body>
+<body class="fullscreen">
+    <div class="container">
+      <h1 class="title">My First PWA!</h1>
+    </div>
+  <script src="js/main.js"></script>
+  </body>
 </html>
